k8s/musicians-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: musicians-service
  name: musicians-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: musicians-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: musicians-service
    spec:
      containers:
      - args:
#        - gunicorn
#        - --workers
#        - "2"
#        - --threads
#        - "4"
#        - --bind
#        - 0.0.0.0:8000
#        - mus_proj.wsgi:application
        - python
        - manage.py
        - runserver
        - 0.0.0.0:8000
        image: feelwork/musicians-musicians-service:1.0.0
        name: musicians-container
      restartPolicy: Always
