k8s/musicians-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: musicians-service
  name: musicians-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: musicians-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: musicians-service
    spec:
      containers:
      - args:
        - gunicorn
        - --workers
        - "2"
        - --threads
        - "4"
        - --bind
        - 0.0.0.0:8000
        - mus_proj.wsgi:application
        image: musicians-site_musicians-service:latest
        name: musicians-container
        volumeMounts:
        - mountPath: /project_dir
          name: musicians-service-claim0
      restartPolicy: Always
      volumes:
      - name: musicians-service-claim0
        persistentVolumeClaim:
          claimName: musicians-service-claim0
