k8s/user-stats-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: user-stats-consumer
  name: user-stats-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-stats-consumer
  template:
    metadata:
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: user-stats-consumer
    spec:
      containers:
      - args:
        - python
        - manage.py
        - consume_user_stats
        image: user-stats-consumer
        name: user-stats-consumer
      restartPolicy: Always
