k8s/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: users-service
  name: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: users-service
  template:
    metadata:
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: users-service
    spec:
      containers:
      - args:
        - gunicorn
        - --workers
        - "2"
        - --threads
        - "4"
        - --bind
        - 0.0.0.0:8000
        - users.wsgi:application
        image: feelwork/musicians-users-service:1.0.0
        name: users-container
      restartPolicy: Always
