k8s/musicians-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicians-service
spec:
  selector:
    service: musicians-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
