k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.musicians.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kong
              port:
                number: 8000
