k8s/app-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-network
spec:
  podSelector:
    matchLabels:
      network/app-network: "true"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          network/app-network: "true"
